# sonotxt-rust

./: .env.example  .gitignore  Cargo.toml  DESIGN.md  test_api.sh  test_api2.sh
.sqlx/: query-017ee056dac78b1085153a83065566cdd8b878724a1fe41bc2ad264aee7fa6a7.json  query-02d24be5f3d606c0f2d2a756c78240a1390fc791c830d7d77f4c452b476eb3fb.json  query-03643039b715fc3c0b135054f343970ad5be4f1ca82950397811944094aaf5b9.json  query-093208d1a898177b8cdc9918abcb2128669870cad298e872d3890bea87967a0b.json  query-0b1719148f772c82c83a7ba2f25f407326adaaa6475fb4f29add11101c258623.json  query-11c5d7c58a2075a80263721b18c75fe51fb2a1b9b955247db144f61dcd1cf836.json  query-1c24ca1e1f938303dcce052401e25a23ebbc6902fedad9338003ee4457714dc0.json  query-1e34661fef4ba2b1e97f67a3fbab66d3b223fb66a8d15f92a54de8d43c1a10d8.json  query-2139b6ca3ba453500ac1b3e3e6523b6bc4e182c15f8e6ce61e05b52b26328fa7.json  query-245055d369352a70dbe1a515907426b5ae55c7283238a3e6ae6219e2e5f67334.json  query-2831229ce3e705d284827e0a4f970a79095cb727cccc955f8cf79e474e7afe2e.json  query-35d7470aef784682c1616c5286544507846fe67a01e93693b7dc4c0286e4e0b4.json  query-369b8293328e469aba9eb0f947790420c46ace6a31e22b7be493ae149883a449.json  query-36a2ff0fd55df3aba653418a4fe8656dcdd14347f9184e2fb1059020334bbd75.json  query-409f572ade4f2af3499e71235193f4ddff0250e6d56fcffef7be5ef904a34498.json  query-40a4935cbeb4ebd6699bd745380ffc8b52f02660b8f968d6bc40f55900d3c766.json  query-517393937ebfa2778405f55bf72a48cd601ea9288250d1f7184738166f9ea90c.json  query-51a1ca62425534741c772ba858db7860b40d31f46d765553d70b1bd9a862f78d.json  query-59b7a82e05d35333b03b1c402961baeca813ad33cef24e2a3ee69f584aa4138f.json  query-59d7a0ed8233a37019255ca470dc9241d3d15960594f78de39ce489b3df3d84e.json  query-5c079d2d471f91903bed7bb87594a3ced2ed1ee2720d6d36f254096c7273d74c.json  query-5c982fe1b38c356f34d28be80f0497ad3ff0643f815b7e4d09c12bebe50071d8.json  query-5dc5dc4bd048f33ff75549720bdc71d27d221dc5c2f700a4801b274c6aa4548a.json  query-64060838b9ab055913a43f26453bfdc50392ab6e78928f6d5d55bf032ecde01e.json  query-6839c6039f16d2463e328df8b2bd2acfc309432688814a1a1360ffe5888dc731.json  query-6c9e31e1fe96015d3886177cecfa056392e3fdd7d5ac3b52d068d772635d9693.json  query-6d06601593c20c505ab0318a6c7ba4b70b6b38fde4877df5d4e4f70eddf79a33.json  query-6fa319a85c851d9ee28588992625ca972b95f8ae8431e0b0aadf80ca61a205f0.json  query-76d3426a0217b37d36a31414d9fd108a25157b6d2c9dde5880908b169d01cf0b.json  query-7f950fccf24734243e490388eb816d9cfeacc3e7afcd68af9d25eab8cc88cd2d.json  query-857809bb69464c1b45bd6737d58fa20581a48495374cdd1a9b04903352cace03.json  query-897eb3642fc87af9ce892adade9a64eaa61a1aa5c06c30595b20b54d816cf63e.json  query-89e106f03aa0f074b9d2ce99e3e275a3a93e5116db3f46449c1237ce7c6ba927.json  query-8b7a56ab0068ed6e0a859d3f59ff7921feb5585a80cb1ad64fc176e5016ebe59.json  query-962f26d8f73644d12b6388fe1ce6f8c7a40de65e5074ce2af2d167d5bd42c76f.json  query-9976178c48ca76522d5ada154dd8c53a0495686c328f3e83664f4f1e2fa2a106.json  query-9ec282ddbfe38a7547279980bb2184c0eac0e0fa6d74540be33f714dfb4f0c11.json  query-a46ff57257405717f1b38bb5ea50777e5ff8a22bac1ce44c494ceffdee72fd9c.json  query-a4be6ba1547f08761b3008a16597538845e088708d56dd444ebf60cb1db5117f.json  query-a7c6278731d281e8e81890f0400d901e1340e09fb7bc07d648ce526ebbdadf97.json  (+21 more)
dashboard/: .gitignore  Cargo.toml
dashboard/scripts/: stop-local-services.sh
dashboard/src/: config.rs  error.rs  main.rs
examples/: test_kokoro.rs  test_penumbra.rs
migrations/: 001_init.sql  001_initial.sql  002_auth_payments.sql  002_billing.sql  002_pricing.sql  002_sites.sql  003_free_tier.sql  004_user_auth.sql  005_progress_estimation.sql  006_ipfs_storage.sql  007_embed_sites.sql  008_recovery_share.sql  009_deposit_addresses.sql  010_penumbra_index.sql  011_add_engine_column.sql  011_vault_storage.sql  013_wallet_auth.sql  014_job_priority.sql  022_zid_auth.sql
rust/: compose.yaml
rust/migrations/: 001_init.sql
rust/scripts/: setup-local-services.sh
rust/src/: models.rs
rust/src/auth/: dev.rs
rust/src/services/: content.rs
sonotxt-api/: Cargo.toml
sonotxt-api/src/: config.rs  job_worker.rs  lib.rs  main.rs
sonotxt-api/src/auth/: api_key.rs  free_tier.rs  mod.rs  stack.rs  zid.rs
sonotxt-api/src/routes/: admin.rs  api.rs  audio.rs  billing.rs  contacts.rs  embed.rs  mod.rs  p2p.rs  passkey.rs  payments.rs  sono.rs  user_auth.rs  vault.rs  ws.rs  zid_auth.rs
sonotxt-api/src/services/: auth.rs  billing.rs  content.rs  crawler.rs  crypto.rs  magic_link.rs  mod.rs  passkey.rs  quic_pool.rs  seed_manager.rs  tpm.rs  user_auth.rs  wallet.rs  worker_pool.rs
sonotxt-api/src/services/payments/: assethub.rs  mod.rs  stripe.rs  zcash.rs
sonotxt-core/: Cargo.toml
sonotxt-core/src/: config.rs  error.rs  lib.rs  models.rs  noise.rs  protocol.rs  quic.rs  storage.rs  worker_types.rs
sonotxt-worker/: Cargo.toml
sonotxt-worker/src/: config.rs  health.rs  main.rs  processor.rs  quic.rs
src/: admin.rs  config.rs  error.rs  extractors.rs  lib.rs  main.rs  models.rs  worker.rs
src/auth/: api_key.rs  dev.rs  free_tier.rs  mod.rs  stack.rs
src/routes/: admin.rs  api.rs  auth.rs  billing.rs  converse.rs  mod.rs  payments.rs  sites.rs  sono.rs  user_auth.rs  vault.rs  ws.rs
src/services/: auth.rs  billing.rs  content.rs  crawler.rs  kokoro.rs  magic_link.rs  mod.rs  sono.rs  storage.rs  user_auth.rs  worker_pool.rs
src/services/payments/: assethub.rs  penumbra.rs  stripe.rs
