[package]
name = "sonotxt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
futures = "0.3"
headers = "0.4"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit", "timeout", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1.5"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "multipart"] }
scraper = "0.19"
url = "2.5"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
subtle = "2.5"
aws-sdk-s3 = "1.65"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-credential-types = "1.2"
base64 = "0.22"
rand = "0.8"
hex = "0.4"

# stripe webhook verification
hmac = "0.12"
sha2 = "0.10"

# user auth with passphrase-derived keys
ed25519-dalek = "2"
argon2 = "0.5"
getrandom = "0.2"

# hardware-secured payment processor
hwpay = { path = "../hwpay", features = ["penumbra"] }
secrecy = "0.10"
async-trait = "0.1"
toml = "0.8"

# local tts inference
kokoro-tts = "0.3"

[dev-dependencies]
tempfile = "3"
