[package]
name = "sonotxt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit", "timeout", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1.5"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
scraper = "0.19"
url = "2.5"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
